--- a/2/çalışma.css
+++ b/2/çalışma.css
@@ -16,11 +16,13 @@ header{
 }
 
 ul{
-
-padding: 2rem;
+/* 
+padding: 2rem; */
 display: flex;
 flex-direction: row;
 list-style-type: none;
+justify-content: space-between;
+/* align-items: center; */
 
 
 
